2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Muine.cs:
	* src/SongDatabase.cs:

	Read album covers in a thread on startup. This greatly improves
	startup speed.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:

	Defer initialization of dialogs till when they are requested.

2004-04-14  Artur Flinta  <aflinta@cvs.gnome.org>

        * configure.in:
	    Added "pl" to ALL_LINGUAS.

2004-04-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	More constructor fixage.

2004-04-13  Kenneth Christiansen  <kenneth@gnu.org>
	    Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/ColoredCellRendererPixbuf.cs:
	* src/HandleView.cs:
	* src/InfoWindow.cs:
	* src/Makefile.am:
	* src/MmKeys.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/VolumeButton.cs:

	Pass IntPtr.Zero to the base constructors when we want dummy objects
	filled in with unmanaged gobjects.

	Use pkg-config files from Gtk# CVS.
	
2004-04-12  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Add "da" to ALL_LINGUAS.

2004-04-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Sort songs by title, then artists.

2004-04-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Remove properties menu item from the tray menu.

2004-04-11  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* data/images/Makefile.am:
	R data/images/muine-groups.png:
	* src/Makefile.am:
	* src/NotificationAreaIcon.cs:
	* src/StockIcons.cs:

	UI cleanups.

2004-04-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/SkipToWindow.cs:

	Play after seek.

2004-04-10  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	R data/glade/GroupsWindow.glade:
	* data/glade/Makefile.am:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:
